--- a/THBuoi2/Areas/Admin/Views/Product/Index.cshtml
+++ b/THBuoi2/Areas/Admin/Views/Product/Index.cshtml
@@ -8,17 +8,17 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
     <div class="container-fluid">
-    <div class="row mb-2">
-        <div class="col-sm-6">
-        <h1>Simple Tables</h1>
-        </div>
-        <div class="col-sm-6">
-        <ol class="breadcrumb float-sm-right">
+        <div class="row mb-2">
+            <div class="col-sm-6">
+                <h1>Simple Tables</h1>
+            </div>
+            <div class="col-sm-6">
+                <ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item"><a asp-action="Index" asp-controller="Admin"> Home</a></li>
-            <li class="breadcrumb-item active">Quản Lý Sản Phẩm</li>
-        </ol>
+                    <li class="breadcrumb-item active">Quản Lý Sản Phẩm</li>
+                </ol>
+            </div>
         </div>
-    </div>
     </div><!-- /.container-fluid -->
 </section>
 
@@ -30,9 +30,9 @@
                 <div class="card">
                     <div class="card-header">
                         <h3 class="card-title">Danh Mục Sản Phẩm </h3>
-                    </div >
-                    <div class ="card-header">
-                         <a asp-action="Add" class="card-title"> Thêm sản phẩm </a>
+                    </div>
+                    <div class="card-header">
+                        <a asp-action="Add" class="card-title"> Thêm sản phẩm </a>
                     </div>
                     <!-- ./card-header -->
                     <div class="card-body">
@@ -50,27 +50,34 @@
                             <tbody>
                                 @foreach (var product in Model)
                                 {
-                                    <tr data-widget="expandable-table" aria-expanded="false">                                       
+                                    <tr data-widget="expandable-table" aria-expanded="false">
                                         <td>@product.Id</td>
-                                        <td>@product.ImageUrl</td>
+                                        <td>
+                                            @if (!string.IsNullOrEmpty(product.ImageUrl))
+                                            {
+                                                <img src="@product.ImageUrl" alt="Product Image" style="max-width:200px;" />
+
+                                            }
+                                        </td>
+
                                         <td>@product.Name</td>
                                         <td>@product.Price</td>
                                         <td>@product.Category.Name</td>
-                                        <td> 
+                                        <td>
                                             <a asp-action="Display" asp-route-id="@product.Id">View</a> |
                                             <a asp-action="Update" asp-route-id="@product.Id">Edit</a> |
                                             <a asp-action="Delete" asp-route-id="@product.Id">Delete</a>
                                         </td>
                                     </tr>
                                     <tr class="expandable-body">
-                                        <td colspan="5">
+                                        <td colspan="6">
                                             <p>
                                                 @product.Description
                                             </p>
                                         </td>
                                     </tr>
 
-                                }                     
+                                }
                             </tbody>
                         </table>
                     </div>
