--- a/THBuoi2/Areas/Admin/Views/Product/Delete.cshtml
+++ b/THBuoi2/Areas/Admin/Views/Product/Delete.cshtml
@@ -10,7 +10,7 @@
         <div class="row mb-2">
             <div class="col-sm-6">
                 <h1>Xoá Sản Phẩm</h1>
-                </divs
+                </div>
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item"><a asp-action="Index" asp-controller="Admin"> Home</a></li>
