--- a/THBuoi2/Areas/Admin/Views/Product/Display.cshtml
+++ b/THBuoi2/Areas/Admin/Views/Product/Display.cshtml
@@ -24,7 +24,7 @@
 <!-- Main content -->
 <section class="content">
     <div class="container-fluid">
-        <h2>@Model.Name</h2>
+       @* <h2>@Model.Name</h2>
         <div>
 
             @if (!string.IsNullOrEmpty(Model.ImageUrl))
@@ -43,6 +43,47 @@
             <p>@Model.Description</p>
 
         </div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Back to List</a>*@
+
+        
+
+        <!-- content -->
+        <section class="py-5">
+            <div class="container">
+                <div class="row gx-5">
+                    <aside class="col-lg-6">
+                        <div class="border rounded-4 mb-3 d-flex justify-content-center">
+                            <a class="rounded-4">
+                                <img style="max-width: 100%; max-height: 100vh; margin: auto;" class="rounded-4 fit" src="@Model.ImageUrl" />
+                            </a>
+                        </div>
+                        <!-- thumbs-wrap.// -->
+                        <!-- gallery-wrap .end// -->
+                    </aside>
+                    <main class="col-lg-6">
+                        <div class="ps-lg-3">
+                            <h4 class="title text-dark">
+                                @Model.Name <br/>  
+                                @Model.Category.Name<br/>
+                            </h4>
+                            
+                            <div class="mb-3">
+                                <span class="h5">@Model.Price VNĐ</span>
+                            </div>
+
+                            <p>
+                                @Model.Description
+                            </p>                         
+                            <a class="btn btn-warning shadow-0" asp-action="Update" asp-route-id="@Model.Id">Edit</a>
+                            <a class="btn btn-warning shadow-0" asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
+                        </div>
+                    </main>
+                </div>
+            </div>
+        </section>
+        <!-- content -->
+        
+		
     </div>
 </section>
+
