--- a/THBuoi2/Areas/Admin/Views/Product/Index.cshtml
+++ b/THBuoi2/Areas/Admin/Views/Product/Index.cshtml
@@ -10,7 +10,7 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1>Simple Tables</h1>
+                <h1>Quản Lý Sản Phẩm</h1>
             </div>
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
@@ -55,8 +55,7 @@
                                         <td>
                                             @if (!string.IsNullOrEmpty(product.ImageUrl))
                                             {
-                                                <img src="@product.ImageUrl" alt="Product Image" style="max-width:200px;" />
-
+                                                <img src="@product.ImageUrl" alt="Product Image" style="max-width:100px; max-height:100px">
                                             }
                                         </td>
 
