--- a/THBuoi2/Views/Home/Index.cshtml
+++ b/THBuoi2/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 			{
 				<div class="product">
 				<div class="product-img">
-						<img src=@product.ImageUrl alt="">
+						<img src=@product.ImageUrl alt="Product Image">
 					<div class="product-label">
 						<span class="sale">-30%</span>
 						<span class="new">NEW</span>
